# remote-slurm-executor

./: .gitignore  README.md  hello.py  pyproject.toml
remote_slurm_executor/: _test_slurm_remote.py  integration_test.py  slurm_remote.py  utils.py
remote_slurm_launcher/: integration_test.py  slurm_remote.py
