[project]
name = "remote_slurm_executor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["milatools>=0.1.5", "setuptools>=75.2.0", "submitit>=1.5.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["remote_slurm_executor"]

[project.entry-points."submitit"]
executor = "remote_slurm_executor:RemoteSlurmExecutor"

[tool.uv]
dev-dependencies = ["pytest-skip-slow>=0.0.5", "pytest>=8.3.3"]
package = true

[tool.pytest.ini_options]
testpaths = ["remote_slurm_executor"]
norecursedirs = [".venv"]
addopts = ["--doctest-modules"]

[tool.ruff]
line-length = 99
indent-width = 4
# Add the pyupgrade and isort options in addition to the defaults.
lint.select = ["E4", "E7", "E9", "F", "I", "UP"]
